three day forecasts display. Misaligned on show. day two and three probably need to show correct info in future

--- a/app/assets/stylesheets/components/_forecast_weather_card.scss
+++ b/app/assets/stylesheets/components/_forecast_weather_card.scss
@@ -1,6 +1,7 @@
-.weather-container {
+.forecast-weather-container {
+  display: flex;
   color: white;
-  .weather {
+  .forecast-weather {
     padding: 5px;
     background-color: #960808;
     border: 2px solid #000000;
